tenzir/integration/data/reference/pipelines_local/test_parse_operators/step_02.ref
error: unexpected positional argument
 --> <input>:1:9
  |
1 | version 42
  |         ^^ 
  |
  = usage: version (takes no arguments)
  = docs: https://docs.tenzir.com/operators/version